--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,9 @@ celerybeat.pid
 
 # Environments
 .env
+venv
 .venv
+.venv/
 env/
 venv/
 ENV/
@@ -127,3 +129,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Project specific
+photo-library-builder/config.json
+config.json
+.DS_Store
